--- a/pytorch_tutorial.ipynb
+++ b/pytorch_tutorial.ipynb
@@ -97,10 +97,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/anaconda3/lib/python3.9/site-packages/torch/cuda/__init__.py:145: UserWarning: \n",
+      "NVIDIA GeForce RTX 3090 with CUDA capability sm_86 is not compatible with the current PyTorch installation.\n",
+      "The current PyTorch install supports CUDA capabilities sm_37 sm_50 sm_60 sm_70.\n",
+      "If you want to use the NVIDIA GeForce RTX 3090 GPU with PyTorch, please check the instructions at https://pytorch.org/get-started/locally/\n",
+      "\n",
+      "  warnings.warn(incompatible_device_warn.format(device_name, capability, \" \".join(arch_list), device_name))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BATCH_SIZE is the number of transitions sampled from the replay buffer\n",
+    "# GAMMA is the discount factor as mentioned in the previous section\n",
+    "# EPS_START is the starting value of epsilon\n",
+    "# EPS_END is the final value of epsilon\n",
+    "# EPS_DECAY controls the rate of exponential decay of epsilon, higher means a slower decay\n",
+    "# TAU is the update rate of the target network\n",
+    "# LR is the learning rate of the AdamW optimizer\n",
+    "BATCH_SIZE = 128\n",
+    "GAMMA = 0.99\n",
+    "EPS_START = 0.9\n",
+    "EPS_END = 0.05\n",
+    "EPS_DECAY = 1000\n",
+    "TAU = 0.005\n",
+    "LR = 1e-4\n",
+    "\n",
+    "# Get number of actions from gym action space\n",
+    "n_actions = env.action_space.n\n",
+    "# Get the number of state observations\n",
+    "state, info = env.reset()\n",
+    "n_observations = len(state)\n",
+    "\n",
+    "policy_net = DQN(n_observations, n_actions).to(device)\n",
+    "target_net = DQN(n_observations, n_actions).to(device)\n",
+    "target_net.load_state_dict(policy_net.state_dict())\n",
+    "\n",
+    "optimizer = optim.AdamW(policy_net.parameters(), lr=LR, amsgrad=True)\n",
+    "memory = ReplayMemory(10000)\n",
+    "\n",
+    "\n",
+    "steps_done = 0\n",
+    "\n",
+    "\n",
+    "def select_action(state):\n",
+    "    global steps_done\n",
+    "    sample = random.random()\n",
+    "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+    "        math.exp(-1. * steps_done / EPS_DECAY)\n",
+    "    steps_done += 1\n",
+    "    if sample > eps_threshold:\n",
+    "        with torch.no_grad():\n",
+    "            # t.max(1) will return the largest column value of each row.\n",
+    "            # second column on max result is index of where max element was\n",
+    "            # found, so we pick action with the larger expected reward.\n",
+    "            return policy_net(state).max(1)[1].view(1, 1)\n",
+    "    else:\n",
+    "        return torch.tensor([[env.action_space.sample()]], device=device, dtype=torch.long)\n",
+    "\n",
+    "\n",
+    "episode_durations = []\n",
+    "\n",
+    "\n",
+    "def plot_durations(show_result=False):\n",
+    "    plt.figure(1)\n",
+    "    durations_t = torch.tensor(episode_durations, dtype=torch.float)\n",
+    "    if show_result:\n",
+    "        plt.title('Result')\n",
+    "    else:\n",
+    "        plt.clf()\n",
+    "        plt.title('Training...')\n",
+    "    plt.xlabel('Episode')\n",
+    "    plt.ylabel('Duration')\n",
+    "    plt.plot(durations_t.numpy())\n",
+    "    # Take 100 episode averages and plot them too\n",
+    "    if len(durations_t) >= 100:\n",
+    "        means = durations_t.unfold(0, 100, 1).mean(1).view(-1)\n",
+    "        means = torch.cat((torch.zeros(99), means))\n",
+    "        plt.plot(means.numpy())\n",
+    "\n",
+    "    plt.pause(0.001)  # pause a bit so that plots are updated\n",
+    "    if is_ipython:\n",
+    "        if not show_result:\n",
+    "            display.display(plt.gcf())\n",
+    "            display.clear_output(wait=True)\n",
+    "        else:\n",
+    "            display.display(plt.gcf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def optimize_model():\n",
+    "    if len(memory) < BATCH_SIZE:\n",
+    "        return\n",
+    "    transitions = memory.sample(BATCH_SIZE)\n",
+    "    # Transpose the batch (see https://stackoverflow.com/a/19343/3343043 for\n",
+    "    # detailed explanation). This converts batch-array of Transitions\n",
+    "    # to Transition of batch-arrays.\n",
+    "    batch = Transition(*zip(*transitions))\n",
+    "\n",
+    "    # Compute a mask of non-final states and concatenate the batch elements\n",
+    "    # (a final state would've been the one after which simulation ended)\n",
+    "    non_final_mask = torch.tensor(tuple(map(lambda s: s is not None,\n",
+    "                                          batch.next_state)), device=device, dtype=torch.bool)\n",
+    "    non_final_next_states = torch.cat([s for s in batch.next_state\n",
+    "                                                if s is not None])\n",
+    "    state_batch = torch.cat(batch.state)\n",
+    "    action_batch = torch.cat(batch.action)\n",
+    "    reward_batch = torch.cat(batch.reward)\n",
+    "\n",
+    "    # Compute Q(s_t, a) - the model computes Q(s_t), then we select the\n",
+    "    # columns of actions taken. These are the actions which would've been taken\n",
+    "    # for each batch state according to policy_net\n",
+    "    state_action_values = policy_net(state_batch).gather(1, action_batch)\n",
+    "\n",
+    "    # Compute V(s_{t+1}) for all next states.\n",
+    "    # Expected values of actions for non_final_next_states are computed based\n",
+    "    # on the \"older\" target_net; selecting their best reward with max(1)[0].\n",
+    "    # This is merged based on the mask, such that we'll have either the expected\n",
+    "    # state value or 0 in case the state was final.\n",
+    "    next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
+    "    with torch.no_grad():\n",
+    "        next_state_values[non_final_mask] = target_net(non_final_next_states).max(1)[0]\n",
+    "    # Compute the expected Q values\n",
+    "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
+    "\n",
+    "    # Compute Huber loss\n",
+    "    criterion = nn.SmoothL1Loss()\n",
+    "    loss = criterion(state_action_values, expected_state_action_values.unsqueeze(1))\n",
+    "\n",
+    "    # Optimize the model\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    # In-place gradient clipping\n",
+    "    torch.nn.utils.clip_grad_value_(policy_net.parameters(), 100)\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA error: no kernel image is available for execution on the device\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 35\u001b[0m\n\u001b[1;32m     33\u001b[0m policy_net_state_dict \u001b[39m=\u001b[39m policy_net\u001b[39m.\u001b[39mstate_dict()\n\u001b[1;32m     34\u001b[0m \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m policy_net_state_dict:\n\u001b[0;32m---> 35\u001b[0m     target_net_state_dict[key] \u001b[39m=\u001b[39m policy_net_state_dict[key]\u001b[39m*\u001b[39;49mTAU \u001b[39m+\u001b[39m target_net_state_dict[key]\u001b[39m*\u001b[39m(\u001b[39m1\u001b[39m\u001b[39m-\u001b[39mTAU)\n\u001b[1;32m     36\u001b[0m target_net\u001b[39m.\u001b[39mload_state_dict(target_net_state_dict)\n\u001b[1;32m     38\u001b[0m \u001b[39mif\u001b[39;00m done:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: no kernel image is available for execution on the device\nCUDA kernel errors might be asynchronously reported at some other API call,so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1."
+     ]
+    }
+   ],
+   "source": [
+    "if torch.cuda.is_available():\n",
+    "    num_episodes = 600\n",
+    "else:\n",
+    "    num_episodes = 50\n",
+    "\n",
+    "for i_episode in range(num_episodes):\n",
+    "    # Initialize the environment and get it's state\n",
+    "    state, info = env.reset()\n",
+    "    state = torch.tensor(state, dtype=torch.float32, device=device).unsqueeze(0)\n",
+    "    for t in count():\n",
+    "        action = select_action(state)\n",
+    "        observation, reward, terminated, truncated, _ = env.step(action.item())\n",
+    "        reward = torch.tensor([reward], device=device)\n",
+    "        done = terminated or truncated\n",
+    "\n",
+    "        if terminated:\n",
+    "            next_state = None\n",
+    "        else:\n",
+    "            next_state = torch.tensor(observation, dtype=torch.float32, device=device).unsqueeze(0)\n",
+    "\n",
+    "        # Store the transition in memory\n",
+    "        memory.push(state, action, next_state, reward)\n",
+    "\n",
+    "        # Move to the next state\n",
+    "        state = next_state\n",
+    "\n",
+    "        # Perform one step of the optimization (on the policy network)\n",
+    "        optimize_model()\n",
+    "\n",
+    "        # Soft update of the target network's weights\n",
+    "        # θ′ ← τ θ + (1 −τ )θ′\n",
+    "        target_net_state_dict = target_net.state_dict()\n",
+    "        policy_net_state_dict = policy_net.state_dict()\n",
+    "        for key in policy_net_state_dict:\n",
+    "            target_net_state_dict[key] = policy_net_state_dict[key]*TAU + target_net_state_dict[key]*(1-TAU)\n",
+    "        target_net.load_state_dict(target_net_state_dict)\n",
+    "\n",
+    "        if done:\n",
+    "            episode_durations.append(t + 1)\n",
+    "            plot_durations()\n",
+    "            break\n",
+    "\n",
+    "print('Complete')\n",
+    "plot_durations(show_result=True)\n",
+    "plt.ioff()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
